Update styles and improve table sorting logic

--- a/index.html
+++ b/index.html
@@ -8,19 +8,20 @@
   <style>
     body { font-family: Arial, sans-serif; background: #f4f6f9; margin: 0; padding: 20px; color: #333; }
     h1, h2 { text-align: center; color: #2c3e50; }
-    .container { max-width: 1400px; margin: 0 auto; background: white; padding: 30px; border-radius: 10px; box-shadow: 0 4px 12px rgba(0,0,0,0.1); }
+    .container { max-width: 1500px; margin: 0 auto; background: white; padding: 30px; border-radius: 10px; box-shadow: 0 4px 12px rgba(0,0,0,0.1); }
     .upload-area { border: 3px dashed #3498db; border-radius: 10px; padding: 40px; text-align: center; margin-bottom: 30px; background: #ecf0f1; }
     .upload-area:hover { background: #d6e6f5; }
-    table { width: 100%; border-collapse: collapse; margin-top: 20px; }
-    th { background: #3498db; color: white; padding: 12px; cursor: pointer; }
+    table { width: 100%; border-collapse: collapse; margin-top: 20px; table-layout: auto; }
+    th { background: #3498db; color: white; padding: 12px; cursor: pointer; white-space: nowrap; }
     th:hover { background: #2980b9; }
     td { padding: 10px 12px; border-bottom: 1px solid #ddd; text-align: center; }
+    td.left { text-align: left; }
     tr:nth-child(even) { background: #f9f9f9; }
     .total-row { font-weight: bold; background: #2c3e50 !important; color: white; font-size: 1.1em; }
     .summary-table th { background: #27ae60; }
     .info { text-align: center; color: #7f8c8d; margin: 20px 0; font-size: 1.1em; }
     .error { color: #e74c3c; font-weight: bold; text-align: center; }
-    .section { margin-top: 50px; }
+    .section { margin-top: 60px; }
   </style>
 </head>
 <body>
@@ -37,14 +38,14 @@
   </div>
 
   <script>
-    // Functie om tabel te sorteren op kolom
+    // Sorteerfunctie voor tabellen
     function sortTable(table, colIndex, asc = true) {
       const tbody = table.querySelector('tbody');
       const rows = Array.from(tbody.querySelectorAll('tr'));
       rows.sort((a, b) => {
-        let aText = a.cells[colIndex].innerText;
-        let bText = b.cells[colIndex].innerText;
-        if (!isNaN(aText) && !isNaN(bText)) {
+        let aText = a.cells[colIndex].innerText.trim();
+        let bText = b.cells[colIndex].innerText.trim();
+        if (!isNaN(aText) && !isNaN(bText) && aText !== '' && bText !== '') {
           return asc ? Number(aText) - Number(bText) : Number(bText) - Number(aText);
         }
         return asc ? aText.localeCompare(bText) : bText.localeCompare(aText);
@@ -64,9 +65,21 @@
           const sheet = workbook.Sheets[workbook.SheetNames[0]];
           const json = XLSX.utils.sheet_to_json(sheet, { header: 1, defval: "" });
 
-          // Zoek header rij
+          // Exacte kolomnamen zoals in jouw bestand
+          const requiredCols = [
+            "Ordernummer",
+            "Afleverdatum", 
+            "Artikel",
+            "Artikelomschrijving",
+            "Aantal",
+            "Cradle behoefte",
+            "Cradle Type",
+            "Pallet behoefte",
+            "Pallet Type"
+          ];
+
+          // Zoek de header rij
           let headerRow = -1;
-          const requiredCols = ["Ordernummer","Afleverdatum","Artikel","Artikelomschrijving","Aantal","Cradle behoefte","Cradle Type","Pallet behoefte","Pallet Type"];
           for (let i = 0; i < json.length; i++) {
             const row = json[i].map(cell => (cell || "").toString().trim());
             if (requiredCols.every(col => row.includes(col))) {
@@ -75,25 +88,29 @@
             }
           }
 
-          if (headerRow === -1) throw new Error("Kolomnamen niet gevonden in het bestand.");
+          if (headerRow === -1) throw new Error("Kolomnamen niet gevonden. Zorg dat alle kolommen exact aanwezig zijn.");
 
-          const headers = json[headerRow];
+          const headers = json[headerRow].map(h => (h || "").toString().trim());
+
+          // Maak mapping van kolomnaam naar index
           const colIndices = {};
           requiredCols.forEach(col => {
-            const idx = headers.findIndex(h => (h || "").toString().trim() === col);
-            if (idx !== -1) colIndices[col] = idx;
+            const idx = headers.indexOf(col);
+            if (idx === -1) throw new Error(`Kolom "${col}" niet gevonden.`);
+            colIndices[col] = idx;
           });
 
-          // Verzamel alle data rijen (skip subtotaal en lege rijen)
+          // Verzamel data rijen (skip lege en subtotaalrijen)
           const rows = [];
           for (let i = headerRow + 1; i < json.length; i++) {
             const rawRow = json[i];
-            if (!rawRow || rawRow.filter(c => c !== "").length < 3) continue; // te leeg
+            if (!rawRow || rawRow.length < 5) continue;
 
-            const ordernummer = rawRow[colIndices["Ordernummer"]] || "";
-            const palletType = rawRow[colIndices["Pallet Type"]] || "";
+            const ordernummer = (rawRow[colIndices["Ordernummer"]] || "").toString().trim();
+            const palletType = (rawRow[colIndices["Pallet Type"]] || "").toString().trim();
 
-            if (ordernummer === "" && palletType === "") continue; // subtotaal rij
+            // Skip subtotaalrijen (geen ordernummer en geen pallet type, of met totalen)
+            if ((ordernummer === "" || ordernummer === "0") && (palletType === "" || palletType.includes("TOTAAL"))) continue;
 
             rows.push({
               ordernummer: ordernummer,
@@ -101,9 +118,9 @@
               artikel: rawRow[colIndices["Artikel"]] || "",
               omschrijving: rawRow[colIndices["Artikelomschrijving"]] || "",
               aantal: rawRow[colIndices["Aantal"]] || "",
-              cradle: parseInt(rawRow[colIndices["Cradle behoefte"]] || 0),
+              cradle: parseInt(rawRow[colIndices["Cradle behoefte"]] || 0) || 0,
               cradleType: rawRow[colIndices["Cradle Type"]] || "",
-              pallet: parseInt(rawRow[colIndices["Pallet behoefte"]] || 0),
+              pallet: parseInt(rawRow[colIndices["Pallet behoefte"]] || 0) || 0,
               palletType: palletType
             });
           }
@@ -112,21 +129,22 @@
           const grouped = {};
           const ordersPerType = {};
           rows.forEach(r => {
-            if (!grouped[r.palletType]) {
-              grouped[r.palletType] = { cradles: 0, pallets: 0 };
-              ordersPerType[r.palletType] = new Set();
+            const pt = r.palletType || "Onbekend";
+            if (!grouped[pt]) {
+              grouped[pt] = { cradles: 0, pallets: 0 };
+              ordersPerType[pt] = new Set();
             }
-            grouped[r.palletType].cradles += r.cradle;
-            grouped[r.palletType].pallets += r.pallet;
-            if (r.ordernummer) ordersPerType[r.palletType].add(r.ordernummer);
+            grouped[pt].cradles += r.cradle;
+            grouped[pt].pallets += r.pallet;
+            if (r.ordernummer) ordersPerType[pt].add(r.ordernummer);
           });
 
           const sortedTypes = Object.keys(grouped).sort();
 
-          // Bouw output
+          // Bouw HTML
           let html = `
             <div class="info">
-              Bestand: <strong>${file.name}</strong> • Verwerkt op: ${new Date().toLocaleString('nl-NL')} • ${rows.length} regels gevonden
+              Bestand: <strong>${file.name}</strong> • Verwerkt op: ${new Date().toLocaleString('nl-NL')} • ${rows.length} regels verwerkt
             </div>
 
             <h2>Samenvatting per Palletmaat</h2>
@@ -151,7 +169,7 @@
             totalPallets += pallets;
 
             html += `<tr>
-              <td><strong>${type || 'Onbekend'}</strong></td>
+              <td><strong>${type}</strong></td>
               <td>${countOrders}</td>
               <td>${cradles}</td>
               <td>${pallets}</td>
@@ -166,19 +184,19 @@
             </tr></tbody></table>
 
             <div class="section">
-              <h2>Alle details uit het Excel-bestand</h2>
+              <h2>Volledige details (alle orders)</h2>
               <table id="detailTable">
                 <thead>
                   <tr>
-                    <th onclick="sortTable(document.getElementById('detailTable'), 0)">Ordernummer</th>
-                    <th onclick="sortTable(document.getElementById('detailTable'), 1)">Afleverdatum</th>
-                    <th onclick="sortTable(document.getElementById('detailTable'), 2)">Artikel</th>
-                    <th onclick="sortTable(document.getElementById('detailTable'), 3)">Artikelomschrijving</th>
-                    <th onclick="sortTable(document.getElementById('detailTable'), 4)">Aantal</th>
-                    <th onclick="sortTable(document.getElementById('detailTable'), 5)">Cradle behoefte</th>
-                    <th onclick="sortTable(document.getElementById('detailTable'), 6)">Cradle Type</th>
-                    <th onclick="sortTable(document.getElementById('detailTable'), 7)">Pallet behoefte</th>
-                    <th onclick="sortTable(document.getElementById('detailTable'), 8)">Pallet Type</th>
+                    <th onclick="sortTable(this.parentNode.parentNode.parentNode, 0)">Ordernummer</th>
+                    <th onclick="sortTable(this.parentNode.parentNode.parentNode, 1)">Afleverdatum</th>
+                    <th onclick="sortTable(this.parentNode.parentNode.parentNode, 2)">Artikel</th>
+                    <th onclick="sortTable(this.parentNode.parentNode.parentNode, 3)">Artikelomschrijving</th>
+                    <th onclick="sortTable(this.parentNode.parentNode.parentNode, 4)">Aantal</th>
+                    <th onclick="sortTable(this.parentNode.parentNode.parentNode, 5)">Cradle behoefte</th>
+                    <th onclick="sortTable(this.parentNode.parentNode.parentNode, 6)">Cradle Type</th>
+                    <th onclick="sortTable(this.parentNode.parentNode.parentNode, 7)">Pallet behoefte</th>
+                    <th onclick="sortTable(this.parentNode.parentNode.parentNode, 8)">Pallet Type</th>
                   </tr>
                 </thead>
                 <tbody>`;
@@ -188,7 +206,7 @@
               <td>${r.ordernummer}</td>
               <td>${r.afleverdatum}</td>
               <td>${r.artikel}</td>
-              <td style="text-align:left;">${r.omschrijving}</td>
+              <td class="left">${r.omschrijving}</td>
               <td>${r.aantal}</td>
               <td>${r.cradle}</td>
               <td>${r.cradleType}</td>
